Radlun Revamp, Jotunn Science
* Radlun has been redesigned by Techo with help from me (Luna).
* Fix ocean sphere radius on Ilmar.
* Fix biome map color codes on Jotunn.
* Jotunn surface science by Wolf-Rayet.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
@@ -49,7 +49,7 @@
 		Orbit
 		{
 			referenceBody = PJ2/Alkin
-			color = #64803a
+			color = #6f4f34
 			semiMajorAxis = 110008700
 			eccentricity = 0.08
 			inclination = 3
@@ -61,11 +61,10 @@
 				color = 0.853846252,0.853846014,0.853846252,1
 				specColor = 0,0,0,1
 				shininess = 0.03
-			}
-			OnDemand
-			{
-				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/man_goecolor.dds
-				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/asteroid_normal.dds
+				
+				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/Radlun_Color.dds
+				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/Radlun_Normal.dds
+
 			}
 		}
 		PQS
@@ -78,11 +77,29 @@
 			{
 				VertexHeightMap
 				{
-      				map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/man_goe.png
+      				map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/radHeight7.png
       				offset = 0
-      				deformity = 7000
+      				deformity = 2000
       				scaleDeformityByRadius = false
       				order = 1
+      				enabled = true
+				}
+				VertexHeightMap
+				{
+      				map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/RadlunCracks.png
+      				offset = -160
+      				deformity = 160
+      				scaleDeformityByRadius = false
+      				order = 1
+      				enabled = true
+				}
+				VertexHeightMap
+				{
+      				map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/Radshape1.png
+      				offset = 0
+      				deformity = 9000
+      				scaleDeformityByRadius = false
+      				order = 2
       				enabled = true
 				}
 				VoronoiCraters
@@ -101,7 +118,7 @@
 					voronoiDisplacement = 0
 					voronoiFrequency = 3
 					voronoiSeed = 97643
-					order = 2
+					order = 3
 					enabled = True
 					name = crters
 					CraterCurve
@@ -180,7 +197,7 @@
 				}
     			VertexColorMap
     			{
-      				map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/man_goecolor.dds
+      				map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/Radcolor3.png
       				order = 20
       				enabled = true
     			}
