--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/4-Jotunn.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/4-Jotunn.cfg
@@ -24,35 +24,35 @@
 				{
 					name = CarbonFrost
 					displayName = Polar Carbon Dioxide Frost
-					color = #00ff1f
+					color = #ffffff
 					value = 1
 				}
 				Biome
 				{
 					name = AmmoniaFrost
 					displayName = Polar Ammonia Frost
-					color = #00ff1f
+					color = #df2267
 					value = 1
 				}
 				Biome
 				{
 					name = Cryoridges
 					displayName = Cryovolcanic Ridgelines
-					color = #00ff1f
+					color = #655252
 					value = 1
 				}
 				Biome
 				{
 					name = Lavender
 					displayName = Tholinated Icesheets
-					color = #00ff1f
+					color = #9f888f
 					value = 1
 				}
 				Biome
 				{
 					name = Lakes
 					displayName = Ammonia Lakes
-					color = #00ff1f
+					color = #ff1800
 					value = 1
 				}
 			}
