--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/ScienceDefinitions/Jotunn.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/ScienceDefinitions/Jotunn.cfg
@@ -7,7 +7,13 @@
 			name = Jötunn
 			Values
 			{
-			
+				SrfLandedCarbonFrost = You heard a crunch from outside, it sounded like snow being compressed under a very large boot. Perhaps that's exactly what it was, more or less.
+				SrfLandedAmmoniaFrost = Looking outside, you can see dazzling auroras dancing through the vibrant pink sky. The radiation environment of Jötunn is as beautiful as it is dangerous.
+				SrfLandedCryoridges = These mountain ranges are one of Jötunn's most easily identified features from space. However that does not necessarily mean they are the easiest place to land.
+				SrfLandedLavender = These relatively flat regions cover most of Jötunn's equator, where it isn't dominated by lakes and mountains anyway. Regions like this one would make apt staging areas to explore the rest of Jötunn's diverse surface.
+
+				SrfLandedLakes = Seems to be time for a termendously cold, and potentially carcinogenic, ammonia beach trip! You hope your EVA suit radiation and thermal protection is as good as promised.
+				SrfSplashedLakes = The craft bobs on the waves of liquid ammonia, Jötunn's atmosphere seems to have considerable winds.
 			}
 		}
 	}
@@ -21,7 +27,13 @@
 			name = Jötunn
 			Values
 			{
-			
+				SrfLandedCarbonFrost = Carbon dioxide frost coats this region and this thick alien blanket of snow reminds you faintly of the permafrost back home. It takes a considerable amount of digging to reveal the bed... rock? Ice?
+				SrfLandedAmmoniaFrost = The ice caps of Jötunn are made of wide regions of CO2 frost, and smaller regions of ammonia frost. It's these regions of ammonia snow alongside the ammonia lakes at the equator that make Jötunn a colder analogue to worlds like Haut-Oklo, or even our own Armstrong.
+				SrfLandedCryoridges = These ridgelines are volcanic, but of course not the kind of volcanism you're familiar with. The icy internal workings of Jötunn are like an imperfect mirror of home, with ice instead of stone. Jötunn seems to go through periods of heavy cryovolcanic and cryotectonic action, with these ridges as evidence, and has likely been doing so long before its capture by Bifröst.
+				SrfLandedLavender = The samples collected are... igneous? It's difficult to place these ice samples into the usual geologic terms developed on Armstrong. They're clearly volcanic in origin, but they melt somewhat from the heat of your suit alone! Hopefully your ship has a cooler.
+
+				SrfLandedLakes = The banks of the lake are covered in many small stones, stones of ice of course. The idea that these smooth gravelly shores were made by the crashing of not water, but ammonia, is an amusing thought. You pick up a few beach "rocks" for good luck, and of course characterizing the erosive forces at play once they're returned home.
+				SrfSplashedLakes = Samples of the liquid ammonia are scooped directly into what are essentially really cool space thermoses. They have to be kept cool or they'll boil, and that wouldn't be good for perserving their nature for study back home. You are reminded not to get any of the sample on your bare skin once you return inside. To say you'd get frostbite would be... an understatement.
 			}
 		}
 	}
@@ -35,7 +47,15 @@
 			name = Jötunn
 			Values
 			{
-			
+				SrfLandedCarbonFrost = You're tempted to make a snowball, but this snow doesn't stick together well at all. Curse you non-polar snow.
+				SrfLandedAmmoniaFrost = You catch a glimpse of the magnetodisk, and after staring for a few moments you become aware of its motion in the sky. It's beautiful, but you're well aware of its danger.
+				SrfLandedCryoridges = You watch your step as you navigate the rugged terrain on foot. Your view goes on for kilometers up here! You can't get enough of the sight of this strange pink wonderland.
+				SrfLandedLavender = Even here at the equator, you can see auroras in the sky, it's actually distracting you from your usual EVA operations.
+
+				SrfLandedLakes = It's like standing on the shore of a beach back home, except everything is wrong. It's all, pink. Really pink.
+				SrfSplashedLakes = You notice your suit seems to be steaming... but it's actually... well, no technically it *is* steaming. The cold ammonia around you seems to be evaporating as it touches your EVA suit, and you refuse to turn down the heaters.
+
+				Flying = You hope you packed your chute, this may be a slightly risky move. The ground below sure seems... very very below you. Luckily the atmosphere is so dense, your chute, which you once again hope you packed, should make a safe emergency landing trival. Might wanna check one more time to be sure.
 			}
 		}
 	}
@@ -49,7 +69,13 @@
 			name = Jötunn
 			Values
 			{
-			
+				SrfLandedCarbonFrost = The readings are cold. But that doesn't surprise anyone. They're cold for *Jötunn,* and it's still not surprising, these are the anticipated coldest parts of Jötunn!
+				SrfLandedAmmoniaFrost = The readings are cold. But that doesn't surprise anyone. They're cold for *Jötunn,* and it's still not surprising, these are the anticipated coldest parts of Jötunn!
+				SrfLandedCryoridges = These are some of the hottest temperatures Jötunn offers, a bad day on Armstrong looks like a Subpyrian Desert by comparison.
+				SrfLandedLavender = These are some of the hottest temperatures Jötunn offers, a bad day on Armstrong looks like a Subpyrian Desert by comparison.
+
+				SrfLandedLakes = Ahhh... the tropics! (Relaitvely) Warm lakes of ammonia, the (relatively) warm suns-shine beaming down, the magnetic rainbow across the sky... the (relatively) perfect vacation spot! Jötunn's tropics are (relatively) balmy enough to support large bodies of liquid ammonia.
+				SrfSplashedLakes = Ahhh... the tropics! (Relaitvely) Warm lakes of ammonia, the (relatively) warm suns-shine beaming down, the magnetic rainbow across the sky... the (relatively) perfect vacation spot! Jötunn's tropics are (relatively) balmy enough to support large bodies of liquid ammonia.
 			}
 		}
 	}
@@ -63,7 +89,13 @@
 			name = Jötunn
 			Values
 			{
-			
+				SrfLandedCarbonFrost = The goo doesn't even bother trying, it's bad enough with the magnetodisk nearby, and nothing about this region of Jötunn is even remotely appealing to it. I think she wants to go home.
+				SrfLandedAmmoniaFrost = The goo doesn't even bother trying, it's bad enough with the magnetodisk nearby, and nothing about this region of Jötunn is even remotely appealing to it. I think she wants to go home.
+				SrfLandedCryoridges = The goo decides to give it a try before becoming immediately "scorched" by the intense radiation environment. The goo self-amputates several large sections of itself before returning to hibernation. Perhaps this is how goo deals with cancer? You make a note to screen the mystery goo prior to reintegration with the central body.
+				SrfLandedLavender = The goo decides to give it a try before becoming immediately "scorched" by the intense radiation environment. The goo self-amputates several large sections of itself before returning to hibernation. Perhaps this is how goo deals with cancer? Either that or its throwing one hell of a fit.
+
+				SrfLandedLakes = The mystery goo would love to spread itself out on the icesand and enjoy the view. Unfortionately for both you and the goo, doing such a thing would prove very, very fatal.
+				SrfSplashedLakes = The goo considers taking up boogieboarding, but decides staying in hiberation may be a better option than braving the cryogenic seas.
 			}
 		}
 	}
@@ -77,7 +109,13 @@
 			name = Jötunn
 			Values
 			{
-			
+				SrfLandedCarbonFrost = At these pressures, most engines are rendered completely useless! That's worth keeping in mind, a lack of understanding on that front could result in serious headache.
+				SrfLandedAmmoniaFrost = At these pressures, most engines are rendered completely useless! That's worth keeping in mind, a lack of understanding on that front could result in serious headache.
+				SrfLandedCryoridges = At these pressures, most engines are rendered completely useless! That's worth keeping in mind, a lack of understanding on that front could result in serious headache.
+				SrfLandedLavender = At these pressures, most engines are rendered completely useless! That's worth keeping in mind, a lack of understanding on that front could result in serious headache.
+
+				SrfLandedLakes = At these pressures, most engines are rendered completely useless! That's worth keeping in mind, a lack of understanding on that front could result in serious headache.
+				SrfSplashedLakes = At these pressures, most engines are rendered completely useless! That's worth keeping in mind, a lack of understanding on that front could result in serious headache.
 			}
 		}
 	}
@@ -91,7 +129,13 @@
 			name = Jötunn
 			Values
 			{
-			
+				SrfLandedCarbonFrost = There are some inconsistences in the underlying surface, this is a potential indicator of liquid-filled caverns below the surface. These are very unlikely to be liquid water. More than likely this is more ammonia.
+				SrfLandedAmmoniaFrost = There are some inconsistences in the underlying surface, this is a potential indicator of liquid-filled caverns below the surface. These are very unlikely to be liquid water. More than likely this is more ammonia.
+				SrfLandedCryoridges = Cryomagma chambers are observed below the cryovolcanic surface of this cryogenic fluid world's cryotectonic ridgelines. Cryomagma is most likely water in this circumstance. Perhaps it connects to a large mantle of liquid water deeper down?
+				SrfLandedLavender = Little variation is seen below the surface, the crust seems to be very well differentiated.
+
+				SrfLandedLakes = Little variation is seen below the surface, the crust seems to be very well differentiated.
+				SrfSplashedLakes = Boyancy has little hinderance on the gravitometer, which detects gravioli particles and not the force of gravity. That said... the unstationary nature of Jötunn's oceans doesn't help. At the very least, surface gravity is, definitively, much lower than it is on Armstrong.
 			}
 		}
 	}
@@ -105,7 +149,13 @@
 			name = Jötunn
 			Values
 			{
-			
+				SrfLandedCarbonFrost = 74.6% N2, 8.4% C2H6, 6.4% CO2, 4.5% Ar, 3.8% CH4, 1.4% H2S, 0.9% NH3
+				SrfLandedAmmoniaFrost = 74.6% N2, 8.4% C2H6, 6.4% CO2, 4.5% Ar, 3.8% CH4, 1.4% H2S, 0.9% NH3
+				SrfLandedCryoridges = 74.6% N2, 8.4% C2H6, 6.4% CO2, 4.5% Ar, 3.8% CH4, 1.4% H2S, 0.9% NH3
+				SrfLandedLavender = 74.6% N2, 8.4% C2H6, 6.4% CO2, 4.5% Ar, 3.8% CH4, 1.4% H2S, 0.9% NH3
+
+				SrfLandedLakes = 74.6% N2, 8.4% C2H6, 6.4% CO2, 4.5% Ar, 3.8% CH4, 1.4% H2S, 0.9% NH3
+				SrfSplashedLakes = 74.6% N2, 8.4% C2H6, 6.4% CO2, 4.5% Ar, 3.8% CH4, 1.4% H2S, 0.9% NH3
 			}
 		}
 	}
@@ -119,7 +169,13 @@
 			name = Jötunn
 			Values
 			{
-			
+				SrfLandedCarbonFrost = It is exceptionally difficult to detect S-waves, and the P-wave shadows are very large on Jötunn, but density calcuations do not align with a large core. Using observations of several events, the model constructed is consistent with the idea that Jötunn not only hosts a molten core, but a subsurface ocean as well.
+				SrfLandedAmmoniaFrost = It is exceptionally difficult to detect S-waves, and the P-wave shadows are very large on Jötunn, but density calcuations do not align with a large core. Using observations of several events, the model constructed is consistent with the idea that Jötunn not only hosts a molten core, but a subsurface ocean as well.
+				SrfLandedCryoridges = The epicenters of many quakes seem to be found in these regions of Jötunn.
+				SrfLandedLavender = It is exceptionally difficult to detect S-waves, and the P-wave shadows are very large on Jötunn, but density calcuations do not align with a large core. Using observations of several events, the model constructed is consistent with the idea that Jötunn not only hosts a molten core, but a subsurface ocean as well.
+
+				SrfLandedLakes = The waves crashing on the beach create a lot of noise in the data, however there are indeed indications that Jötunn experiences internal geological movements. With something in the way...?
+				SrfSplashedLakes = This is quite the opposite of a steady surface, and trying to get good readings of the seismic nature of Jötunn is incredibly difficult, if not impossible.
 			}
 		}
 	}
@@ -133,7 +189,7 @@
 			name = Jötunn
 			Values
 			{
-			
+				SrfSplashedLakes = For years on the rocks has referred to ice in a beverage, now the ice is the beverage, and the rocks are the materials in the materials bay. Haha.
 			}
 		}
 	}
