--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
@@ -14,7 +14,7 @@
 		{
 			displayName = Radlun^N
 			//this is the asteroid -techo <3
-			description = The smallest moon of Alkin, it appears very bright for its size, which indicates it is either very reflective or emitting light through unknown methods. \n -Mh
+			description = The smallest moon of Alkin, it appears very bright for its size, which indicates it is either very reflective or emitting light through unknown methods. \n -Mh, Techo, & Luna
 			biomeMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun_Biomes.png
 			radius = 10631
 			geeASL = 0.011
